--- a/Draw/Dice/Resource/help/help/dice/itemsUsage_en.html
+++ b/Draw/Dice/Resource/help/help/dice/itemsUsage_en.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<link href="style.css" rel="stylesheet" type="text/css" />
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-</head>
-
-<body>
-<div id="content">
-  <div class="toollist"><span class="bell_bg">C</span> <span class="bell_detail">By using this item, you are able to chanllenge with double coins. That means winner gets double coins, and loser loses double coins.</div>
-  <div class="toollist"><span class="bell_bg">R</span> <span class="bell_detail">By using this item, you are able to reroll your dice, especially when you are not satisfied with your current dice.</span></div>
-</div>
-</body>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title></title>
+    </head>
+    
+    <body>
+        <div id="content">
+            <div class="toollist pi">By using this item, you means you are quite confident to challenge,so the ante doubles.</div>
+            <div class="toollist yao"> If you are not content with the rolled dice, you can use this item to re-roll once.</div>
+            <div class="toollist kan">By using this item, you can peek one dice of each player.<br/><br/></div>
+            <div class="toollist yan">By using this item, you can get more time before you should make a bid or challenge. You can use it once in one game.</div>
+            <div class="toollist cui">Contrast to MoreTime, this item will cut off 5 seconds from next player.<br/><br/></div>
+            <div class="toollist gui"> Like pass in Pokers, you can yield your chance if you feel not safe to bid or challenge.</div>
+            <div class="toollist ni">By using this item, you can reverse the play order,which is clockwise by default.</div>
+            <div class="toollist zhu">By using this item, the game system will give your advice of whether challenge or bidding, what to bid.</div>
+        </div>
+    </body>
 </html>
