--- a/Draw/Dice/Resource/help/help/dice/gameRules_en.html
+++ b/Draw/Dice/Resource/help/help/dice/gameRules_en.html
@@ -8,9 +8,9 @@
 <body>
 <div id="content">
   <div class="explain">
-	  <p>Liar dice is a popular game in bars games . If you are familiar with the game rules, you can just skip the section <B>Rules of Happy Field</B>below.</p>
+	  <p>Liar dice is a popular game in bars games . If you are familiar with the game rules, you can just skip the section <B>Rules of Normal Field</B>below.</p>
 <hr />
-<p><h2>Rules of Happy Field</h2></p>
+<p><h2>Rules of Normal Field</h2></p>
 	<ul>
 		<li>Each dice has 6 sides, with minimum face value of 2, and maximum face value of 1, as is in ascending order: 2 3 4 5 6 1. </li>
 		<li>The face value 1 is often WILD, which means that it count as the face of current bid, except it is explicitly bidded or any player bids WILDS.</li>
@@ -22,7 +22,7 @@
 	</ul>
 <hr />
 <p><h2>Rules of Carnival Field</h2></p>
-<p>The rules are based on the those of Happy Field, plus the extra items described below:</p>
+<p>The rules are based on the those of Normal Field, plus the extra items described below:</p>
 	<ul>
 		<li><B>X of a kind</B>: If your all dices are of the same face value, e.g. Six of a kind, it may counts as quantity of SEVEN, which means you have 7x6,not 5x6.</li>
 		<li><B>Two kinds</B>: If your all dices are composed of only two kind of face value,among which one kind MUST BE value One, the other kind may be any of the other five face value except one, you    may get quantity of SIX if One is not WILD,  e.g. 1 2 2 2 2, may count as 6x2.i</li>
@@ -52,7 +52,7 @@
 <hr />
 <p><h2>Awards</h2></p>
 	<ul>
-		<li>In Happy Field, the winner gains 100 coins bonus, while the loser gets 100 coins deducted. All players gain 3 expirience. </li>
+		<li>In Normal Field, the winner gains 100 coins bonus, while the loser gets 100 coins deducted. All players gain 3 expirience. </li>
 		<li>In Carnival Field and Ultra Carnival Field, the quantity of coins are bound to the fore-mentioned formula.</li> 
 		<li>If a player bets, and he/she wins, he/she will gain coins of quantity of odds multiplyed by ante, the ante is variable in different fields, the odds will show immediately after a play challenges.However if he/she loses, he/she will just get coins of quantity of ante deducted.</li>
 	</ul>
