--- a/Draw/Dice/Resource/help/help/dice/itemsUsage_en.html
+++ b/Draw/Dice/Resource/help/help/dice/itemsUsage_en.html
@@ -8,14 +8,14 @@
     
     <body>
         <div id="content">
-            <div class="toollist pi">By using this item, you means you are quite confident to challenge,so the ante doubles.</div>
-            <div class="toollist yao"> If you are not content with the rolled dice, you can use this item to re-roll once.</div>
-            <div class="toollist kan">By using this item, you can peek one dice of each player.<br/><br/></div>
-            <div class="toollist yan">By using this item, you can get more time before you should make a bid or challenge. You can use it once in one game.</div>
-            <div class="toollist cui">Contrast to MoreTime, this item will cut off 5 seconds from next player.</div>
-            <div class="toollist gui"> Like pass in Pokers, you can yield your chance if you feel not safe to bid or challenge.</div>
-            <div class="toollist ni">By using this item, you can reverse the play order,which is clockwise by default.</div>
-            <div class="toollist zhu">By using this item, the game system will give your advice of whether challenge or bidding, what to bid.</div>
+            <div class="toollist pi">By using "CUT" item, you means you are quite confident to challenge, so the ante doubles.</div>
+            <div class="toollist yao"> If you are not content with the rolled dice, you can use "Reroll" item to re-roll once.</div>
+            <div class="toollist kan">By using "Peek" item, you can peek one dice of each player.<br/><br/></div>
+            <div class="toollist yan">By using "Postpone" item, you can get more time before you should make a bid or challenge. You can use it once in one game.</div>
+            <div class="toollist cui">Contrast to "Postpone" item, "Urge" item will cut off 5 seconds from next player.</div>
+            <div class="toollist gui"> Like pass in Pokers, you can use "Turtle" item to yield your chance if you feel not safe to bid or challenge.</div>
+            <div class="toollist ni">By using "Reverse" item, you can reverse the play order,which is clockwise by default.</div>
+            <div class="toollist zhu">By using "Smart butler" item, the game system will give your advice of whether challenge or bidding, and what to bid.</div>
         </div>
     </body>
 </html>
