--- a/Draw/Dice/Resource/help/help/dice/gameRules_en.html
+++ b/Draw/Dice/Resource/help/help/dice/gameRules_en.html
@@ -24,9 +24,9 @@
 <p><h2>Rules of Carnival Field</h2></p>
 <p>The rules are based on the those of Happy Field, plus the extra items described below:</p>
 	<ul>
-		<li><B>X of a kind</B>: If your all dices are of the same face value, e.g. Six of a kind, it may counts as quantity of SEVEN, which means you have 7x6,not 5x6.</li>
-		<li><B>Two kinds</B>: If your all dices are composed of only two kind of face value,among which one kind MUST BE value One, the other kind may be any of the other five face value except one, you    may get quantity of SIX if One is not WILD,  e.g. 1 2 2 2 2, may count as 6x2.i</li>
-		<li><B>Snake</B>: quite like Straight in Pokers, it means any dice is  different with any other dice in its face value, e.g. 1 3 4 5 6, which may count as nothing.</li>
+		<li><B>Net</B>: If your all dices are of the same face value, which is called "<B>Net</B>", e.g. Six of a kind, it may counts as quantity of SEVEN, which means you have 7x6,not 5x6.</li>
+		<li><B>Wai</B>: If your all dices are composed of only two kind of face value, among which one kind MUST BE value One, the other kind may be any of the other five face value except one, which is called "<B>Wai</B>", you may get quantity of SIX if One is not WILD,  e.g. 1 2 2 2 2, may count as 6x2.i</li>
+		<li><B>Snake</B>: Quite like Straight in Pokers, it means any dice is different with any other dice in its face value, which is called "<B>Snake</B>", e.g. 1 3 4 5 6, which may count as nothing.</li>
 		<li> The coins you gain in this field are also calculated in different way, it is exactly bound to this formula: <B>GainCoins = ( | current bid quantity - exact quantity on table | + 1) * ante</B>, in which ante is 100 coins. The loser will be cut off the same quantity of coins as winner. e.g. A bids 8x2, B challenges A, and it turns out there is exactly 10x2 on table, so A gains 300 coins , while B gets 300 coins deducted.</li>
 		<li> To get entry permit into this field, you are required to have more than <B>2,000</B> coins in your pocket.</li>
 
